--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
 			<button class="k drum">k</button>
 			<button class="l drum">l</button>
 		</div>
+    <button class="t drum">t</button>
 
 		<script src="index.js"></script>
 	</body>
